--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -6,20 +6,23 @@
    </head>
    <body>
       <div>
-	    {% if category %}
+	  {% if category %}
 		   <h1>{{ category.name }}</h1>
 		   {% if pages %}
 		   <ul>
 		      {% for page in pages %}
 			  <li><a href="{{ page.url}}">{{ page.title }}</a></li>
+			  {% endfor %}
 		   </ul>
 		   {% else %}
 		   <strong>No pages currently in category.</strong>
 		   {% endif %}
-		{% else %}
+	  {% else %}
 		   The specified category does not exist. 
-		{% endif %}
+	  {% endif %}
+	  <a href="/rango/">Index</a>
 	  </div>
+	  
    </body>
 </html>
 
