--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html> 
-   <head>
-     <title>Rango</title>
-   </head>
-   <body>
-      <div>
+{% block title_block %}
+    {% if category %}
+	   {{ category.name}}
+	{% else %}
+	    Unknown Category
+    {% endif %}
+{% endblock %}
+{% block body_block %}
 	  {% if category %}
 		   <h1>{{ category.name }}</h1>
 		   {% if pages %}
@@ -17,13 +20,11 @@
 		   {% else %}
 		   <strong>No pages currently in category.</strong>
 		   {% endif %}
+	       <a href="{% url 'rango:add_page' category.slug %}"}>Add Page</a><br/>
 	  {% else %}
 		   The specified category does not exist. 
+		   
 	  {% endif %}
-	  <a href="/rango/">Index</a>
-	  </div>
-	  
-   </body>
-</html>
-
+	 
+{% endblock %}
 	  
