--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,5 +1,8 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
+{% block title_block %}
+  About Rango
+{% endblock %}
 {% block body_block %}
      <h1>Rango says...</h1>
 	 <div>
