--- a/tango_with_django_project/templates/rango/add_category.html
+++ b/tango_with_django_project/templates/rango/add_category.html
@@ -1,6 +1,6 @@
 {% extends 'rango/base.html' %}
 {% block title_block %}
-    About Rango
+    Add a Category
 {% endblock %}
 {% block body_block %}
 	    <h1>Add a Category</h1>
