--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -8,6 +8,7 @@
 	 <div>
 	    here is the about page.<br />
 		<strong>This tutorial has been put together by Patrick Innes</strong><br />
+        <strong>Visits: {{ visits }}</strong> 	 
 	 </div>
 	 <div>
 		<img src="{% static 'images/rango.jpg' %}"
