--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -3,17 +3,18 @@
    Add a Page
 {% endblock %}
 {% block body_block %}
-	    <h1>Add a Page</h1>
+	    <h1>{{category.slug}}:add a page</h1>
 		<div>
 		   <form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
 		   {% csrf_token %}
 		   {% for hidden in form.hidden_fields %}
-		       {{ hidden }}
+		         {{ hidden }}
 		   {% endfor %}
 		   {% for field in form.visible_fields %}
-		       {{ field.errors }}
-			   {{ field.help_text }}
-			   {{ field }}
+		         {{ field.errors }}
+			     {{ field.help_text }}
+			     {{ field }}
+			     <br />
 		   {% endfor %}
 		   <input type="submit" name="submit" value="Create page"/>
 		   </form>
